[package]
name = "gwmp-mux"
version = "0.11.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2021"
description = "Multiplexer for Semtech's GWMP over UDP"
license = "Apache-2.0"
keywords = ["lorawan", "iot", "lpwan", "semtech", "gwmp"]
repository = "https://github.com/helium/gwmp-mux"

[dependencies]
semtech-udp = { version  = ">=0.11", features = ["server", "client"] }
tokio = { version = "1", features = ["sync", "io-util", "signal", "io-std"]}
structopt = { version = "0.3.2", default-features = false }
slog = "2"
slog-async = "2"
slog-term = "2"
slog-syslog = "0"
slog-scope = "4"
slog-stdlog = "4"
thiserror = "1"
triggered  = "0"
